--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src="https://supertestnet.github.io/hedgehog/rmd160.js"></script>
         <script>
             var hedgehog = {
-                network: "regtest",
+                network: "testnet",
                 state: {
                     channel_0: {
                         alices_privkey: null,
